add security scopes
