# src/main/kotlin/com/wutsi/platform/account/dto/SearchAccountResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.account.dto
+
+import kotlin.collections.List
+
+public data class SearchAccountResponse(
+    public val accounts: List<AccountSummary> = emptyList()
+)
