# src/main/kotlin/com/wutsi/platform/account/endpoint/GetAccountController.kt
@@ -2,6 +2,7 @@ package com.wutsi.platform.account.endpoint
 
 import com.wutsi.platform.account.`delegate`.GetAccountDelegate
 import com.wutsi.platform.account.dto.GetAccountResponse
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.CrossOrigin
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.PathVariable
@@ -26,6 +27,7 @@ public class GetAccountController(
     private val `delegate`: GetAccountDelegate
 ) {
     @GetMapping("/v1/accounts/{id}")
+    @PreAuthorize(value = "hasAuthority('user-read')")
     public fun invoke(@PathVariable(name = "id") @NotNull id: Long): GetAccountResponse =
         delegate.invoke(id)
 }
