# src/main/kotlin/com/wutsi/platform/account/endpoint/SavePasswordController.kt
@@ -2,6 +2,7 @@ package com.wutsi.platform.account.endpoint
 
 import com.wutsi.platform.account.`delegate`.SavePasswordDelegate
 import com.wutsi.platform.account.dto.SavePasswordRequest
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.CrossOrigin
 import org.springframework.web.bind.`annotation`.PathVariable
 import org.springframework.web.bind.`annotation`.PostMapping
@@ -28,6 +29,7 @@ public class SavePasswordController(
     private val `delegate`: SavePasswordDelegate
 ) {
     @PostMapping("/v1/accounts/{id}/password")
+    @PreAuthorize(value = "hasAuthority('user-manage')")
     public fun invoke(
         @PathVariable(name = "id") @NotNull id: Long,
         @Valid @RequestBody
